# The_Inflected_MF2

./: CMakeLists.txt  README.md
include/: dict.h  inflection.h  mf2.h
src/: dict.cpp  inflection.cpp  main.cpp  mf2.cpp
tests/: tests.cpp
